syntax = "proto3";

option java_package = "com.example.protodatastoresample";
option java_multiple_files = true;

message SettingProto {
  string message = 1;
}